# SWM_billing_batch_c1

./: DETAILED_README.md
R2_int_c1_billing/: README.md  pyproject.toml  pytest.ini  template.yaml
R2_int_c1_billing/functions/billing_file_processor/: app.py  ga_sftp.py
R2_int_c1_billing/functions/billing_queue/: app.py
R2_int_c1_billing/functions/billing_queue_consumer/: c1_billing_queue_consumer.py
R2_int_c1_billing/functions/techone_adaptor/: c1_techone_soap_adaptor.py
R2_int_c1_billing/pipelines/: c1_int_pipeline.yaml
R2_int_c1_billing/tests/: FINANCE_20240510113633.csv  mock_boto.py  test_billing_queue_consumer.py
