[tool.poetry]
name = "r2-int-c1-billing"
version = "0.1.0"
description = ""
authors = ["Alex Yeung <alex.yeung@cognizant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.39.0"
botocore = "^1.39.9"
requests = "^2.31.1"
paramiko = "^4.0.0"
pytest = "8.4.0"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.0"
pytest-cov = "6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
